--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -9,7 +9,7 @@
 </script>
 
 
-<script>
+<script>/*
 function sendReadEvent(title, numberOfCharacters, author) {
     gtag('event', 'read_article', {
         "author": author,
@@ -33,10 +33,10 @@ document.addEventListener("DOMContentLoaded", () => {
             sendReadEvent("Article 3", 150, "Maria S")
         });
     }
-});
+});*/
   
  console.log("2023-02-02 1124")
-
+ 
 </script>
 <script>
   console.log("head-custom.html")
